package role

type Action string

const (
	ActionRead  Action = "read"
	ActionWrite Action = "write"
)
