package role

type Resource string

const (
	ResourceUser   Resource = "user"
	ResourceCourse Resource = "course"
)
